# webdav-filepicker

./: .gitignore  .pre-commit-config.yaml  Procfile  README.md  capabilities.json  pyproject.toml
client/: __main__.py  app.py
client/static/: client.css  mu.amber.css  picker-bridge.js  utils.js
client/templates/: index.html  pick.html  save.html
picker/: __main__.py  app.py  webdav.py
picker/static/: picker.js  style.css
picker/templates/: icons.html  index.html  mkdir.html  preview.html
