[project]
name = "webdav-filepicker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cheroot>=11.1.2",
    "honcho>=2.0.0",
    "quart>=0.20.0",
    "webdav4>=0.11.0",
    "wsgidav>=4.3.3",
    "wtforms>=3.2.1",
]

[dependency-groups]
dev = [
    "canaille[front,oidc,sqlite]>=0.2.4",
    "prek>=0.3.8",
]
